--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,13 @@ nav{
     color: #fff;
     padding: 5px 10px;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     margin-bottom: 15px;
+    gap: 20px;
   
 }
 .logo{
@@ -154,23 +156,22 @@ input:focus{
     height: 70vh;
     width: 99vw;
 }
-.how_contenr{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 15px;
- 
-}
+
 .how_contenr{
     width: 96vw;
     height: 55vh;
     margin: 20px auto;
     border-radius: 15px;
     border: .5px solid #000;
-    
     box-shadow: 10px 10px 1px#dedddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 15px;
 }
+
+
 .how_contenr:hover{
     box-shadow: -10px -10px 1px#dedddd;
     transform: scale(1.01); 
@@ -179,8 +180,8 @@ input:focus{
 }
 .img_box{
     position: relative;
-    height: 100%;
-    width: 37%;
+    height: 96%;
+    width: 35%;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -229,7 +230,8 @@ input:focus{
     box-shadow: 1px 1px 15px 10px #dedddd;
 }
 .how_text_box{
-    height: 250px;;
+    height: 250px;
+    width: 60%;
     background-color: #fff;
     border-radius: 15px;
 }
@@ -542,6 +544,7 @@ input:focus{
     width: 100%;
     overflow: hidden;
     cursor: pointer;
+    border-radius: 15px;
 
 }
 
@@ -590,34 +593,52 @@ input:focus{
 
 
 .success_contener{
-    height: 80vh;
-    width: 95%;
+    /* height: 80vh;
+    width: 95vw;
     margin: auto;
     position: relative;
-    background-color: #407a7a;
-    box-shadow: 0px 0px 1px 10px #dedddd;
-    border-radius: 15px;
-    margin-top: 20px;
+  
     display: flex;
     gap: 15px;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
-    padding-left: 820px;
     overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: scroll;
     margin-bottom: 40px;
-}
-.success_ani{
+    padding-left: 820px; */
     position: relative;
+    height: 80vh;
+    width: 95vw;
+    margin: auto;
+    display: flex;
+    overflow: scroll;
+    background-color: #407a7a;
+    box-shadow: 0px 0px 1px 10px #dedddd;
+    border-radius: 15px;
+    margin-top: 20px;
+    gap: 15px;
+}
+
+.success_ani{
+    /* position: relative;
     height: 450px;
     min-width: 500px;
-    display: flex;
+    width: 300px;
+    flex: 1 ;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+ 
+    margin-left: 20px; */
+    position: relative;
+    height: 450px;
+    min-width: 45%;
+    overflow: hidden;
+    display: flex;
     border-radius: 15px;
     border: 1px solid #fff;
+    margin: 15px 0px;
+
 
 }
 
@@ -1038,7 +1059,77 @@ footer{
 }
 
 
+@media screen and (max-width: 576px) {
+    .how_contenr{
+        display: block;
+        grid-template-rows: 1fr 1fr;
+        width: 96vw;
+        height: 100vh;
+        padding: 0px;
+        overflow: hidden;
+    }
+    .img_box{
+        width: 100%;
+        height: 30%;
+        margin-top: 10px;
+    }
+    .how_text_box{
+        width: 100%;
+        height: 70%;
+        margin-top: 10px;
+        text-align: center;
+        
 
+    }
+    .how_text_box h6{
+        padding: 31px;
+    }
+    .how_text_box p {
+        padding-right: 5px;
+
+    }
+    .how_text_box a{
+        margin: auto;
+    }
+    .teem_contenr{
+        flex-direction: column;
+        height: 100vh;
+        width: 96%;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        padding: 0;
+        padding-top: 1000px;
+    }
+    .teem_box {
+        width: 96%;
+        min-height: 400px;
+
+    }
+    .conten_contner{
+        overflow-y: scroll;
+    }
+    .post_tittel h1 {
+        font-size: 18px;
+        font-weight: 400;
+        text-transform: capitalize;
+        padding-top: 5px;
+
+    }
+   
+    .success_contener{
+        height: 100vh;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        overflow-y: scroll;
+
+    }
+    .success_ani{
+        min-height: 500px;
+    }
+    .bus_btn{
+        display: block;
+    }
+  }
 
 
 
