making contact page responsive

--- a/css/style.css
+++ b/css/style.css
@@ -991,6 +991,9 @@ footer{
     min-height:100% ;
     padding: 10px 0 0 15px;
 }
+form{
+    width: 36vw;
+}
 
 .form_box{
     width: 40vw; 
@@ -1033,7 +1036,7 @@ footer{
     margin-left: 10px;
     border: 2px solid #407a7a;
     border-radius: 15px;
-    width: 400px;
+    width: 90%;
     height: 50px;
 }
 .input_box ::placeholder{
@@ -1042,7 +1045,7 @@ footer{
     text-align: center;
 }
 .input_box textarea{
-    width: 400px; 
+    width: 90%; 
     height: 100px;
     border: 2px solid #407a7a;
     border-radius: 10px;
@@ -1145,10 +1148,22 @@ footer{
     }
     .full_story{
         width: 100vw;
+        height: 50vh;
     
     }
-  }
+    form{
+        width: 90vw;
+    }
 
+    .form_box{
+        width: 95vw;
+        /* padding-left: 15px; */
+        overflow: hidden;
+    
+    }
+
+   
+}
 
 
 
